--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.13.0",
     "babel-plugin-macros": "^3.1.0",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.11.1",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "tailwind-merge": "^1.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
