--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.13.0",
+    "@hookform/error-message": "^2.0.1",
+    "@mui/material": "^5.13.3",
     "babel-plugin-macros": "^3.1.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
