--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/error-message": "^2.0.1",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
+    "@tanstack/react-query": "^4.29.12",
+    "@tanstack/react-query-devtools": "^4.29.12",
+    "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.1",
     "styled-components": "^5.3.10",
     "tailwind-merge": "^1.12.0",
@@ -30,6 +35,7 @@
   },
   "devDependencies": {
     "@hookform/resolvers": "^3.1.0",
+    "@tanstack/eslint-plugin-query": "^4.29.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
