--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -25,6 +26,7 @@
     "babel-plugin-macros": "^3.1.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "node": "^20.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
@@ -36,6 +38,7 @@
   "devDependencies": {
     "@hookform/resolvers": "^3.1.0",
     "@tanstack/eslint-plugin-query": "^4.29.9",
+    "@types/node": "^20.2.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
