dodano możliwość dodania i wysyłki własnego tesktu w Blog za pomocą mongodb

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DB_URI=
-PORT=4000
+DB_URI = mongodb+srv://alicja:Lc57foSko@cluster0.nxlkfx1.mongodb.net/react_db?retryWrites=true&w=majority
+PORT=5000
